# pic18_xc8_project

./: .gitignore  CMakeLists.txt  Makefile  build.ninja
.cmake/api/v1/reply/: cache-v2-988c9fea9d3be806120e.json  cmakeFiles-v1-5a158d361037411a5056.json  codemodel-v2-399506577e622ccfb6c9.json  index-2022-11-04T07-18-23-0871.json  target-app-3a35c86923177b6897e0.json
include/: config.h  utils.h
include/peripherals/: motors.h
src/: main.c  motors.c  utils.c
